--- a/css/style.css
+++ b/css/style.css
@@ -429,34 +429,73 @@ input[type='number'] {
     }
     .menu_mobile {
         display: flex;
+        flex-direction: column;
+    }
+    .menu_inner {
+        display: flex;
         justify-content: space-between;
         align-items: center;
     }
     .menu {
         display: flex;
     }
-    .menu_burger {
+    .menu li {
+        padding: 10px 0;
+    }
+    .menu a {
+        margin: 0;
+    }
+    .menu_burger span {
+        display: block;
+        overflow: hidden;
         cursor: pointer;
-        width: 30px;
-        height: 3px;
+        margin: 0;
+        padding: 0;
+        width: 40px;
+        height: 40px;
+        font-size: 0;
         background-color: #000000;
+        border-radius: 5px;
         position: relative;
     }
-    .menu_burger::after {
-        content: '';
-        width: 30px;
-        height: 3px;
-        background-color: #000000;
+    .menu_burger span {
+        display: block;
         position: absolute;
+        background-color: #fff;
+        height: 3px;
+        width: 30px;
+        top: 18px;
+        left: 5px;
+        right: 5px;
+        transition: background 0s 0.3s;
+    }
+    .menu_burger span:after,
+    .menu_burger span:before {
+        position: absolute;
+        display: block;
+        height: 4px;
+        width: 100%;
+        background-color: #fff;
+        content: '';
+        transition-duration: 0.3s, 0.3s;
+        transition-delay: 0.3s, 0s;
+    }
+    .menu_burger span:after {
+        top: -10px;
+    }
+    .menu_burger span:before {
         bottom: -10px;
     }
-    .menu_burger::before {
-        content: '';
-        width: 30px;
-        height: 3px;
-        background-color: #000000;
-        position: absolute;
-        top: -10px;
+    .menu_burger.close span {
+        background: none;
+    }
+    .menu_burger.close span:after {
+        top: 0;
+        transform: rotate(45deg);
+    }
+    .menu_burger.close span:before {
+        bottom: 0;
+        transform: rotate(-45deg);
     }
     .header_title {
         padding-top: 100px;
